--- a/index.html
+++ b/index.html
@@ -9,3 +9,21 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header class="masthead">
+    <div class="grid grid-middle pad-t-1-2 pad-b-1-2 gutter-half">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2">
+        <h1 class="push-0 exa pad-b-1-4">Solar System</h1>
+      </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2">
+        <nav>
+          <ul class="push-0">
+            <li class="island-half current"><a href="#">Planets</a></li>
+            <li class="island-half"><a href="#">Moons</a></li>
+            <li class="island-half"><a href="#">Exploration</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+</body>
+</html>
